# Black-Hole-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.obsidian/: workspace.json
docs/: IMGUI_INTEGRATION.md
include/: Application.h  Camera.h  CameraController.h  Clock.h  ComputeShader.h  Config.h  InputHandler.h  InputState.h  RayTraceEngine.h  Renderer.h  Settings.h  Shader.h  Simulation.h  UISystem.h  Utils.h  Window.h
res/compute/: pinn.comp  simulation.comp
res/models/: far_field_final.pth  near_field_beta0.1_300epochs.pth
res/planets/: base_planets.txt
res/shaders/: radialMesh.frag  radialMesh.vert  screenQuad.frag
src/: Application.cpp  Camera.cpp  CameraController.cpp  Clock.cpp  ComputeShader.cpp  InputHandler.cpp  RayTraceEngine.cpp  Renderer.cpp  Settings.cpp  Shader.cpp  Simulation.cpp  UISystem.cpp  Utils.cpp  Window.cpp  main.cpp
